Fixed some alignment issues and added content

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,8 +149,8 @@ body {
 
 .project-section {
   background-color: #ffffff;
-  padding-right: 100px;
-  padding-left: 100px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .footer-section {
